--- a/html/update.html
+++ b/html/update.html
@@ -30,15 +30,11 @@
             <div class="text">
                 <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
                 <br> -->
-                <div class="v1dot8dot3">
+                <div class="v1dot9">
                     <h1>PlayerTube has been updated!</h1>
-                    <div style="margin-bottom: 12px;">I don't know why I love not uploading these updates to the webstores, but we're here now with another update!</div>
                     <ul>
-                        <li>Added <a href="https://github.com/ktg5/PlayerTube/pull/42">#42 - "Extend to apply to cookie-free YT Player"</a> -- adding <kbd>youtube-nocookie.com</kbd> as a site the extension can run on.</li>
-                        <li>Fix issue <a href="https://github.com/ktg5/PlayerTube/issues/40">#40</a> with all themes.</li>
-                        <li>Fix CSS importance--mostly for YouTube Redux.</li>
-                        <li>Build script improvements--mostly relating to Firefox as I've had a stupid thing in it for a while I never realized until now.</li>
-                        <li>Fix update page "formatting".</li>
+                        <b><li>Fixed styling for the new YouTube player style named, Delhi (I think is what it's called)</li></b>
+                        <li>Fixed 2006 fullscreen CSS</li>
                     </ul>
                 </div>
 
@@ -56,6 +52,18 @@
                 <br>
 
                 <h2>Past versions...</h2>
+                <div class="v1dot8dot3">
+                    <div style="font-weight: 600;">v1.8.3</div>
+                    <div style="margin-bottom: 12px;">I don't know why I love not uploading these updates to the webstores, but we're here now with another update!</div>
+                    <ul>
+                        <li>Added <a href="https://github.com/ktg5/PlayerTube/pull/42">#42 - "Extend to apply to cookie-free YT Player"</a> -- adding <kbd>youtube-nocookie.com</kbd> as a site the extension can run on.</li>
+                        <li>Fix issue <a href="https://github.com/ktg5/PlayerTube/issues/40">#40</a> with all themes.</li>
+                        <li>Fix CSS importance--mostly for YouTube Redux.</li>
+                        <li>Build script improvements--mostly relating to Firefox as I've had a stupid thing in it for a while I never realized until now.</li>
+                        <li>Fix update page "formatting".</li>
+                    </ul>
+                </div>
+
                 <div class="v1dot8dot2">
                     <div style="font-weight: 600;">v1.8.2</div>
                     <ul>
