make thumbnail show in `unstarted-mode`

--- a/html/update.html
+++ b/html/update.html
@@ -35,6 +35,7 @@
                     <ul>
                         <b><li>Fixed styling for the new YouTube player style named, Delhi (I think is what it's called)</li></b>
                         <li>Fixed 2006 fullscreen CSS</li>
+                        <li>Fixed a CSS issue with the thumbnail not showing up in the <kbd>unstarted-mode</kbd> state</li>
                     </ul>
                 </div>
 
