last dev update for v1.9 before full release
 - new options for the delhi player
 - css fixes
 - better update log

--- a/html/update.html
+++ b/html/update.html
@@ -34,7 +34,12 @@
                     <h1>PlayerTube has been updated!</h1>
                     <ul>
                         <b><li>Fixed styling for the new YouTube player style named, Delhi (I think is what it's called)</li></b>
-                        <li>Fixed 2006 fullscreen CSS</li>
+                    </ul>
+                    <img src="../img/updates/1.9/img-1.png" style="display: block; margin: auto; margin-block: 1em;">
+                    <ul>
+                        <li>Added a new option for toggling the "More Videos" feature when in fullscreen--toggled off by default</li>
+                        <li>Added a new option for toggling the fullscreen buttons that show on the bottom right</li>
+                        <li style="margin-block-start: 1em;">Fixed 2006 fullscreen CSS</li>
                         <li>Fixed a CSS issue with the thumbnail not showing up in the <kbd>unstarted-mode</kbd> state</li>
                     </ul>
                 </div>
@@ -65,6 +70,8 @@
                     </ul>
                 </div>
 
+                <br>
+
                 <div class="v1dot8dot2">
                     <div style="font-weight: 600;">v1.8.2</div>
                     <ul>
@@ -80,6 +87,8 @@
                         <li>Build script improvements.</li>
                     </ul>
                 </div>
+
+                <br>
 
                 <div class="v1dot8dot1">
                     <div style="font-weight: 600;">v1.8.1</div>
