working on 2015 player, fix #49 & other css things

--- a/html/update.html
+++ b/html/update.html
@@ -30,17 +30,12 @@
             <div class="text">
                 <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
                 <br> -->
-                <div class="v1dot9">
+                <div class="v1dot10">
                     <h1>PlayerTube has been updated!</h1>
                     <ul>
-                        <b><li>Fixed styling for the new YouTube player style named, Delhi (I think is what it's called)</li></b>
-                    </ul>
-                    <img src="../img/updates/1.9/img-1.png" style="display: block; margin: auto; margin-block: 1em;">
-                    <ul>
-                        <li>Added a new option for toggling the "More Videos" feature when in fullscreen--toggled off by default</li>
-                        <li>Added a new option for toggling the fullscreen buttons that show on the bottom right</li>
-                        <li style="margin-block-start: 1em;">Fixed 2006 fullscreen CSS</li>
-                        <li>Fixed a CSS issue with the thumbnail not showing up in the <kbd>unstarted-mode</kbd> state</li>
+                        <b><li>Working on a 2015 player</li></b>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/49">#49 - "[ Bug ] Embeds Broken on 2013 Player"</a></li>
+                        <li>Fixed more styling for all themes with the Delhi player</li>
                     </ul>
                 </div>
 
@@ -58,6 +53,22 @@
                 <br>
 
                 <h2>Past versions...</h2>
+                <div class="v1dot9">
+                    <div style="font-weight: 600;">v1.9</div>
+                    <ul>
+                        <b><li>Fixed styling for the new YouTube player style named, Delhi (I think is what it's called)</li></b>
+                    </ul>
+                    <img src="../img/updates/1.9/img-1.png" style="display: block; margin: auto; margin-block: 1em;">
+                    <ul>
+                        <li>Added a new option for toggling the "More Videos" feature when in fullscreen--toggled off by default</li>
+                        <li>Added a new option for toggling the fullscreen buttons that show on the bottom right</li>
+                        <li style="margin-block-start: 1em;">Fixed 2006 fullscreen CSS</li>
+                        <li>Fixed a CSS issue with the thumbnail not showing up in the <kbd>unstarted-mode</kbd> state</li>
+                    </ul>
+                </div>
+
+                <br>
+
                 <div class="v1dot8dot3">
                     <div style="font-weight: 600;">v1.8.3</div>
                     <div style="margin-bottom: 12px;">I don't know why I love not uploading these updates to the webstores, but we're here now with another update!</div>
