--- a/html/update.html
+++ b/html/update.html
@@ -36,6 +36,7 @@
                         <b><li>Working on a 2015 player</li></b>
                         <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/49">#49 - "[ Bug ] Embeds Broken on 2013 Player"</a></li>
                         <li>Fixed more styling for all themes with the Delhi player</li>
+                        <li>Updated docs images</li>
                     </ul>
                 </div>
 
