fixed a couple more things

--- a/html/update.html
+++ b/html/update.html
@@ -33,9 +33,10 @@
                 <div class="v1dot10">
                     <h1>PlayerTube has been updated!</h1>
                     <ul>
-                        <b><li>Working on a 2015 player</li></b>
+                        <b><li>Added a 2015 player theme! (Basically the player theme before Delhi/2025 but in it's first stage)</li></b>
                         <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/49">#49 - "[ Bug ] Embeds Broken on 2013 Player"</a></li>
                         <li>Fixed more styling for all themes with the Delhi player</li>
+                        <li>Fixed an issue with the volume icon not changing</li>
                         <li>Updated docs images</li>
                     </ul>
                 </div>
