final fixes before full release, pretty sure

--- a/html/update.html
+++ b/html/update.html
@@ -35,9 +35,16 @@
                     <ul>
                         <b><li>Added a 2015 player theme! (Basically the player theme before Delhi/2025 but in it's first stage)</li></b>
                         <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/49">#49 - "[ Bug ] Embeds Broken on 2013 Player"</a></li>
-                        <li>Fixed more styling for all themes with the Delhi player</li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/27">#27 - "[ Bug ] Sometimes the video progress bar disappears."</a></li>
                         <li>Fixed an issue with the volume icon not changing</li>
                         <li>Updated docs images</li>
+                    </ul>
+                    And also A LOT of CSS fixes & improvements!
+                    <ul>
+                        <li>Change the progress bar color when ads are rolling</li>
+                        <li>Fix scrubber position for all themes</li>
+                        <li>Fix time display padding in fullscreen</li>
+                        <li>Fixed some CSS values not changing on channel video trailer</li>
                     </ul>
                 </div>
 
