wanted to fix some scrubber stuff actually

--- a/html/update.html
+++ b/html/update.html
@@ -42,7 +42,7 @@
                     And also A LOT of CSS fixes & improvements!
                     <ul>
                         <li>Change the progress bar color when ads are rolling</li>
-                        <li>Fix scrubber position for all themes</li>
+                        <li>Fix scrubber position for all themes & modes (fullscreen, theater, etc.)</li>
                         <li>Fix time display padding in fullscreen</li>
                         <li>Fixed some CSS values not changing on channel video trailer</li>
                     </ul>
