--- a/html/update.html
+++ b/html/update.html
@@ -37,9 +37,11 @@
                         <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/49">#49 - "[ Bug ] Embeds Broken on 2013 Player"</a></li>
                         <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/27">#27 - "[ Bug ] Sometimes the video progress bar disappears."</a></li>
                         <li>Fixed an issue with the volume icon not changing</li>
+                        <li>Removed player init delay--no need for this pretty sure now</li>
+                        <li>Moved the previous button to the left of the player--like it SHOULD BE... (this was a change in the new player)</li>
                         <li>Updated docs images</li>
                     </ul>
-                    And also A LOT of CSS fixes & improvements!
+                    And also A LOT of CSS stuff--fixes & improvements!
                     <ul>
                         <li>Change the progress bar color when ads are rolling</li>
                         <li>Fix scrubber position for all themes & modes (fullscreen, theater, etc.)</li>
