--- a/html/update.html
+++ b/html/update.html
@@ -36,6 +36,7 @@
                         <b><li>Added a 2015 player theme! (Basically the player theme before Delhi/2025 but in it's first stage)</li></b>
                         <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/49">#49 - "[ Bug ] Embeds Broken on 2013 Player"</a></li>
                         <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/27">#27 - "[ Bug ] Sometimes the video progress bar disappears."</a></li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/51">#51 - "[ Bug ] Floating Player Icons Not Showing Up"</a></li>
                         <li>Fixed an issue with the volume icon not changing</li>
                         <li>Removed player init delay--no need for this pretty sure now</li>
                         <li>Moved the previous button to the left of the player--like it SHOULD BE... (this was a change in the new player)</li>
