first dev release for 1.10.1

--- a/html/update.html
+++ b/html/update.html
@@ -30,8 +30,32 @@
             <div class="text">
                 <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
                 <br> -->
-                <div class="v1dot10">
+                <div class="v1dot10dot1">
                     <h1>PlayerTube has been updated!</h1>
+                    <p>While v1.10 is still a BIG improvement, I kinda missed somethings still...</p>
+                    <ul>
+                        <li>Fixed an issue with the fake bar not displaying</li>
+                        <li>Fixed issues with the resize script</li>
+                        <li>Slight CSS adjustments</li>
+                    </ul>
+                </div>
+
+                <br>
+
+                As always, if you have any issues,
+                <a href='https://github.com/ktg5/PlayerTube/issues'>please report them on the GitHub page!</a>
+                <br>
+                Enjoy!
+
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+
+                <h2>Past versions...</h2>
+                <div class="v1dot10">
+                    <div style="font-weight: 600;">v1.10</div>
                     <ul>
                         <b><li>Added a 2015 player theme! (Basically the player theme before Delhi/2025 but in it's first stage)</li></b>
                         <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/49">#49 - "[ Bug ] Embeds Broken on 2013 Player"</a></li>
@@ -53,18 +77,6 @@
 
                 <br>
 
-                As always, if you have any issues,
-                <a href='https://github.com/ktg5/PlayerTube/issues'>please report them on the GitHub page!</a>
-                <br>
-                Enjoy!
-
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-
-                <h2>Past versions...</h2>
                 <div class="v1dot9">
                     <div style="font-weight: 600;">v1.9</div>
                     <ul>
