--- a/html/update.html
+++ b/html/update.html
@@ -34,6 +34,7 @@
                     <h1>PlayerTube has been updated!</h1>
                     <p>While v1.10 is still a BIG improvement, I kinda missed somethings still...</p>
                     <ul>
+                        <b><li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/58">#58 - "[ 3rd-Party Bug ] New YouTube Redux Update Messes with PlayerTube"</a></li></b>
                         <li>Fixed an issue with the fake bar not displaying</li>
                         <li>Fixed issues with the resize script</li>
                         <li>Slight CSS adjustments</li>
