last few improvements

--- a/html/update.html
+++ b/html/update.html
@@ -36,6 +36,7 @@
                     <ul>
                         <b><li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/58">#58 - "[ 3rd-Party Bug ] New YouTube Redux Update Messes with PlayerTube"</a></li></b>
                         <li>Fixed an issue with the fake bar not displaying</li>
+                        <li>Fixed an issue with the previous button not moving when loading a YouTube page that isn't a video</li>
                         <li>Fixed issues with the resize script</li>
                         <li>Slight CSS adjustments</li>
                     </ul>
