--- a/html/update.html
+++ b/html/update.html
@@ -35,6 +35,10 @@
                     <p>While v1.10 is still a BIG improvement, I kinda missed somethings still...</p>
                     <ul>
                         <b><li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/58">#58 - "[ 3rd-Party Bug ] New YouTube Redux Update Messes with PlayerTube"</a></li></b>
+                    </ul>
+                    <img src="../img/updates/1.10.1/img-1.png" style="display: block; margin: auto; margin-block: 1em;">
+                    <ul>
+                        <li>A new option has been added to toggle the scrubbing preview tooltip</li>
                         <li>Fixed an issue with the fake bar not displaying</li>
                         <li>Fixed an issue with the previous button not moving when loading a YouTube page that isn't a video</li>
                         <li>Fixed issues with the resize script</li>
