--- a/html/update.html
+++ b/html/update.html
@@ -39,7 +39,7 @@
                     <img src="../img/updates/1.10.1/img-1.png" style="display: block; margin: auto; margin-block: 1em;">
                     <ul>
                         <li>A new option has been added to toggle the scrubbing preview tooltip</li>
-                        <li>(1.10.1.1) Fixed <a href="https://github.com/ktg5/PlayerTube/issues/62">#62 - "[ Bug ] Fade Out Option Not Working on 2025 Player"</a></li>
+                        <b><li>(1.10.1.1) Fixed <a href="https://github.com/ktg5/PlayerTube/issues/62">#62 - "[ Bug ] Fade Out Option Not Working on 2025 Player"</a></li></b>
                         <li>Fixed an issue with the fake bar not displaying</li>
                         <li>Fixed an issue with the previous button not moving when loading a YouTube page that isn't a video</li>
                         <li>Fixed issues with the resize script</li>
