might as well just call this a new version
fixes #64

--- a/html/update.html
+++ b/html/update.html
@@ -30,20 +30,11 @@
             <div class="text">
                 <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
                 <br> -->
-                <div class="v1dot10dot1">
+                <div class="v1dot10dot2">
                     <h1>PlayerTube has been updated!</h1>
-                    <p>While v1.10 is still a BIG improvement, I kinda missed somethings still...</p>
                     <ul>
-                        <b><li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/58">#58 - "[ 3rd-Party Bug ] New YouTube Redux Update Messes with PlayerTube"</a></li></b>
-                    </ul>
-                    <img src="../img/updates/1.10.1/img-1.png" style="display: block; margin: auto; margin-block: 1em;">
-                    <ul>
-                        <li>A new option has been added to toggle the scrubbing preview tooltip</li>
-                        <b><li>(1.10.1.1) Fixed <a href="https://github.com/ktg5/PlayerTube/issues/62">#62 - "[ Bug ] Fade Out Option Not Working on 2025 Player"</a></li></b>
-                        <li>Fixed an issue with the fake bar not displaying</li>
-                        <li>Fixed an issue with the previous button not moving when loading a YouTube page that isn't a video</li>
-                        <li>Fixed issues with the resize script</li>
-                        <li>Slight CSS adjustments</li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/64">#64 - "[ Bug ] Themes Still Broken With YouTube Redux (for Firefox)"</a></li>
+                        <li>Update popup page--sizing, html stuff, etc.</li>
                     </ul>
                 </div>
 
@@ -61,6 +52,22 @@
                 <br>
 
                 <h2>Past versions...</h2>
+                <div class="v1dot10dot1">
+                    <div style="font-weight: 600;">v1.10.1</div>
+                    <p>While v1.10 is still a BIG improvement, I kinda missed somethings still...</p>
+                    <ul>
+                        <b><li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/58">#58 - "[ 3rd-Party Bug ] New YouTube Redux Update Messes with PlayerTube"</a></li></b>
+                    </ul>
+                    <img src="../img/updates/1.10.1/img-1.png" style="display: block; margin: auto; margin-block: 1em;">
+                    <ul>
+                        <li>A new option has been added to toggle the scrubbing preview tooltip</li>
+                        <b><li>(1.10.1.1) Fixed <a href="https://github.com/ktg5/PlayerTube/issues/62">#62 - "[ Bug ] Fade Out Option Not Working on 2025 Player"</a></li></b>
+                        <li>Fixed an issue with the fake bar not displaying</li>
+                        <li>Fixed an issue with the previous button not moving when loading a YouTube page that isn't a video</li>
+                        <li>Fixed issues with the resize script</li>
+                        <li>Slight CSS adjustments</li>
+                    </ul>
+                </div>
                 <div class="v1dot10">
                     <div style="font-weight: 600;">v1.10</div>
                     <ul>
