fix fullscreen css stuff--aka #73

--- a/html/update.html
+++ b/html/update.html
@@ -30,11 +30,13 @@
             <div class="text">
                 <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
                 <br> -->
-                <div class="v1dot10dot2">
+                <div class="v1dot11">
                     <h1>PlayerTube has been updated!</h1>
                     <ul>
-                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/64">#64 - "[ Bug ] Themes Still Broken With YouTube Redux (for Firefox)"</a></li>
-                        <li>Update popup page--sizing, html stuff, etc.</li>
+                        <li><b>Fixed CSS relating to things that tie to fullscreen</b> (<kbd>.ytp-big-mode</kbd> has been changed to <kbd>.ytp-fullscreen</kbd>)</li>
+                        <ul>
+                            <li>Was also stated in <a href="https://github.com/ktg5/PlayerTube/issues/73">#73</a>, but I had noticed it before this issue.</li>
+                        </ul>
                     </ul>
                 </div>
 
@@ -52,6 +54,16 @@
                 <br>
 
                 <h2>Past versions...</h2>
+                <div class="v1dot10dot2">
+                    <h1>PlayerTube has been updated!</h1>
+                    <ul>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/64">#64 - "[ Bug ] Themes Still Broken With YouTube Redux (for Firefox)"</a></li>
+                        <li>Update popup page--sizing, html stuff, etc.</li>
+                    </ul>
+                </div>
+
+                <br>
+
                 <div class="v1dot10dot1">
                     <div style="font-weight: 600;">v1.10.1</div>
                     <p>While v1.10 is still a BIG improvement, I kinda missed somethings still...</p>
@@ -68,6 +80,9 @@
                         <li>Slight CSS adjustments</li>
                     </ul>
                 </div>
+
+                <br>
+
                 <div class="v1dot10">
                     <div style="font-weight: 600;">v1.10</div>
                     <ul>
