just some small things

--- a/html/update.html
+++ b/html/update.html
@@ -32,6 +32,7 @@
                 <br> -->
                 <div class="v1dot11">
                     <h1>PlayerTube has been updated!</h1>
+                    <p>Hopefully you had a good Christmas! And cheers to a better new year!</p>
                     <ul>
                         <li><b>Fixed CSS relating to things that tie to fullscreen</b> (<kbd>.ytp-big-mode</kbd> has been changed to <kbd>.ytp-fullscreen</kbd>)</li>
                         <ul>
@@ -55,7 +56,7 @@
 
                 <h2>Past versions...</h2>
                 <div class="v1dot10dot2">
-                    <h1>PlayerTube has been updated!</h1>
+                    <div style="font-weight: 600;">v1.10.2</div>
                     <ul>
                         <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/64">#64 - "[ Bug ] Themes Still Broken With YouTube Redux (for Firefox)"</a></li>
                         <li>Update popup page--sizing, html stuff, etc.</li>
